docker and prisma setup with postgres

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,10 +7,10 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "target": "ES2023",
     "esModuleInterop": true,
-    "target": "esnext",
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
