Set up environment + dependencies for auth0

--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "express-oauth2-jwt-bearer": "^1.7.2",
     "pg": "^8.16.3"
   },
   "devDependencies": {
