--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch -r dotenv/config src/index.ts"
   },
   "keywords": [],
   "author": "",
